tune up example apps (#31)
* - adding missing index.js files to get example apps working
- remove gitignore rule for index.js

* update package dependencies in examples

* update icon bundle for external example

--- a/examples/external/public/index.html
+++ b/examples/external/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="%PUBLIC_URL%/fontawesome-free-solid.js"></script>
+    <script src="%PUBLIC_URL%/fa-solid.js"></script>
     <title>External Example</title>
   </head>
   <body>
